cmake_minimum_required(VERSION 3.13)
project(mcmc)
set(CMAKE_OSX_ARCHITECTURES "x86_64")
set(CMAKE_CXX_STANDARD 11)
add_subdirectory(external/eigen)
find_package(ifopt)
find_package(pybind11)
pybind11_add_module(${PROJECT_NAME} main.cpp barrier_walk.cpp central.cpp dikin_walk.cpp dikinls_walk.cpp john_walk.cpp vaidya_walk.cpp facial_reduction.cpp)

target_link_libraries(${PROJECT_NAME} PUBLIC pybind11::module eigen ifopt::ifopt_ipopt) 